--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "secret-santa",
+  "homepage": "https://basha-a.github.io/zen-santa",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,11 +8,15 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
+
   },
   "dependencies": {
     "canvas-confetti": "^1.9.4",
     "firebase": "^12.6.0",
+    "gh-pages": "^6.3.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.10.0"
